# csci365-game-engine

./: CHANGELOG.md  LICENSE  csci365-game-engine.cabal
app/: Game.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: csci365-game-engine-0.1.0.0-inplace.conf  package.cache
