cabal-version:      3.0
name:               csci365-game-engine
version:            0.1.0.0
synopsis:           A text-based game engine and an example dungeon crawler.
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Katherine Reid, Ryan Fuller
maintainer:         reidst@hendrix.edu, fullerra@hendrix.edu
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   lib
    default-language: Haskell2010

executable csci365-game-engine
    ghc-options: -threaded
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        csci365-game-engine,
        vty-crossplatform,
        vty
    hs-source-dirs:   app
    default-language: Haskell2010
